--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "daisyui": "^5.0.43",
+    "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
