--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "d3": "^7.9.0",
     "daisyui": "^5.0.43",
     "dotenv": "^16.5.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
